--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/header-bg-generic.jpg
 email: zhoushichao888@gmail.com
 description: ""
 keyword: "GenAI, AWS, Machine Learning, Dify, OpenAI, GPT"
-url: "http://zhou.github.io"          # your host, for absolute URL
+url: "http://sczhou0705.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/sczhou0705/zhou.github.io.git" # you code repository
 
